# qec-ai-decoder

./: .gitignore  AGENTS.md  AutoQEC_Brainstorm.ipynb  CLAUDE.md  LICENSE  Makefile  README.md  codecov.yml  design.md  mkdocs.yml  pyproject.toml
.claude/agents/: autoqec-analyst.md  autoqec-coder.md  autoqec-ideator.md
.github/workflows/: ci.yml  docs.yml
autoqec/: __init__.py
autoqec/agents/: cli_backend.py  dispatch.py  schemas.py
autoqec/cheaters/: memorize.py
autoqec/decoders/: __init__.py  backend_adapter.py  custom_fn_rules.py  custom_fn_validator.py  dsl_compiler.py  dsl_schema.py
autoqec/envs/: __init__.py  schema.py
autoqec/eval/: bootstrap.py  independent_eval.py  schema.py
autoqec/example_db/: gnn_gated.yaml  gnn_medium.yaml  gnn_small.yaml  (+4 more)
circuits/: bb72_Hx.npy  bb72_Hz.npy  surface_d5.stim
cli/: __init__.py  autoqec.py
docs/: api-documentation.md  autoqec-hackathon-overview.md  index.md  reward_hacking_taxonomy.md  test-plan.md
knowledge/: AUTORESEARCH_PATTERNS.md  DECODER_ROADMAP.md  INDEX.md  STRATEGIC_ASSESSMENT.md  bibliography.bib  convert_to_markdown.py  download.py  finalize_venues.py  verify_openalex.py  verify_venues.py
scripts/: benchmark_surface_baseline.py  build_trap_fixtures.py  e2e_handshake.py  generate_surface_circuit.py  run_bb72_demo.py  run_quick.py  run_single_round.py  scout_bb72.py
tests/: conftest.py  fixture_utils.py  test_agent_schemas_worktree.py  test_artifact_manifest.py  test_backend_adapter.py  test_bb72_positive_delta_assets.py  test_bb72_positive_delta_benchmark.py  test_bootstrap.py  test_bposd_baseline.py  test_ci_coverage_config.py  test_cli_backend.py  test_cli_helpers.py  test_cli_run_paths.py  test_cli_run_round_worktree.py  test_cold_install_benchmark_doc.py  test_custom_fn_validator.py  test_demo4_present.py  test_demo4_present_html.py  test_demo4_snapshot.py  test_demo5_failure_recovery.py  test_demo5_visual_showcase.py  test_demo6_advisor_replay.py  test_demo6_visual_showcase.py  test_demo7_gpu_positive.py  test_demo_bb72_assets.py  test_demo_presenter_speak_demo.py  test_demo_python_bin.py  test_demo_smoke_contracts.py  test_dsl_compiler.py  test_dsl_schema.py  test_e2e_handshake.py  test_fork_graph.py  test_fork_graph_persist.py  test_gnn_module.py  test_independent_eval.py  test_integration_entry.py  test_interfaces_contract.py  test_isolation_rule.py  test_llm_loop.py  test_llm_loop_resume.py  (+37 more)
(+242 files in other folders)
