[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoqec"
version = "0.1.0"
description = "AutoQEC MVP research harness"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
  "click>=8.1",
  "fvcore>=0.1.5.post20221221",
  "ldpc>=2.4.1",
  "numpy>=2.0",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "pymatching>=2.3",
  "stim>=1.15",
  "torch>=2.11.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
  "pytest-cov>=5.0",
  "ruff>=0.15",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
]

[tool.setuptools.packages.find]
include = ["autoqec*", "cli*"]

[tool.setuptools.package-data]
autoqec = ["example_db/*.yaml", "envs/builtin/*.yaml"]

[tool.pytest.ini_options]
addopts = '-m "not integration" -v'
markers = [
  "integration: marks tests that exercise the end-to-end runner",
  "slow: marks wall-clock-heavy tests that require explicit opt-in",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["autoqec", "cli"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
fail_under = 95

[tool.ruff]
line-length = 100
